@@ -33,6 +33,7 @@
   fix wcscmp and wcsncmp if wchar substraction would overflow (Gabriel Ravier)
   fix wcschr when searching for 0 (bugs@compiler.ai)
   do close-on-exec on the open|socket not fcntl afterwards
+  define ssize_t via __PTRDIFF_TYPE__ not via a horrible kludge involving #define and __SIZE_TYPE__
 
 0.34:
   move stpcpy from libcompat to lib as it is now part of POSIX (Enrico Scholz)
